Fix footer spacing and map border

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,8 @@
 .footer {
   align-items: center;
   text-align: center;
-  padding-bottom: 15px;
+  margin-top:15px;
+  margin-bottom: 15px;
 }
 
 .dropdown-menu > li > p {
@@ -73,7 +74,8 @@ body, html {
 }
 
 div#map {
-  width: 90%;
+  border-radius:5px;
+  width: 100%;
   height: 70%;
   margin-left:auto;
   margin-right:auto;
